[package]
name = "shell"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
thiserror = "1.0.38"                             # error handling
homedir = "0.2.1"
log = "0.4.21"
is_executable = "0.1"
rustyline = { version = "17.0.2", features = ["derive"] }